the one with the speech

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 date: 01/01/24
-Goal:.....
+Goal:..... Build muscle memory.
+I use C++ in this repo.
+As an editor i am using vim, just coz i dont want anything that makes my life easier eg: auto-complete, co-pilot etc.
