Add streak tracking functionality

--- a/README
+++ b/README
@@ -1,6 +1,1 @@
-# WATCH ME GIVE UP ON MY DREAM
-
-date: 01/01/24
-Goal:..... Build muscle memory.
-I use C++ in this repo.
-As an editor i am using vim, just coz i dont want anything that makes my life easier eg: auto-complete, co-pilot etc.
+Current Streak: 1
